--- a/resumestyle.css
+++ b/resumestyle.css
@@ -3,3 +3,13 @@ body {
   font-family: arial, helvetica, sans-serif;
   font-size: 12pt;
   }
+
+header {
+}
+
+profile {
+  background:white;
+}
+
+professional experience {
+}
