--- a/resumestyle.css
+++ b/resumestyle.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-  margin:20px;
+  margin:200px;
   
 }
 
@@ -18,6 +18,6 @@ header {
 }
 
 .professional experience {
-  boarder-style: solid;
-  boarder-width: 5px
+  boarder-style:;
+  boarder-width:;
 }
