--- a/resumestyle.css
+++ b/resumestyle.css
@@ -20,7 +20,7 @@ header {
 .professional experience {
   width: 100%;
   height: 1px
-  background: #fff
+  background:black;
   boarder-style:;
   boarder-width:;
 }
