--- a/resumestyle.css
+++ b/resumestyle.css
@@ -8,20 +8,16 @@ body {
 }
 
 header {
-  margin: 0;
+  margin:;
   
   
 }
 
 .profile {
-  text-align: left;
+  text-align:;
  
 }
 
 .professional experience {
-  width: 100%;
-  height: 1px
-  background:black;
-  boarder-style:;
-  boarder-width:;
+  
 }
