--- a/resumestyle.css
+++ b/resumestyle.css
@@ -4,6 +4,7 @@ body {
   font-size: 12pt;
 }
 
+h4 {text-align:center}
 .image {
   
  
@@ -26,5 +27,6 @@ header {
 
 .professional experience {
   line-height:0;
+  
   
 }
