--- a/resumestyle.css
+++ b/resumestyle.css
@@ -5,8 +5,8 @@ body {
 }
 
 h4 {text-align:center;}
-ul {text-align:center;}
-li {text-align:center;}
+liul {text-align:center;}
+
 .image {
    
   
