--- a/resumestyle.css
+++ b/resumestyle.css
@@ -2,46 +2,32 @@ body {
   background:white;
   font-family: arial, helvetica, sans-serif;
   font-size: 12pt;
+
 }
 
 h4 {
   text-align:center;
   background-color:rgb(128,128,128);
-}
 
-h3 {
-  
-}
-
-ul {
- 
 }
 
 .image {
-  float:center;
-   
+  float:right;
   
- 
 }
 
 header {
-  
   text-align: center;
-  
-  
-  
+ 
 }
  
-
 .profile {
   line-height:1;
   text-align:center;
- 
  
 }
 
 .professional experience {
   line-height:0;
-  
   
 }
