--- a/resumestyle.css
+++ b/resumestyle.css
@@ -5,10 +5,6 @@ body {
 
 }
 
-h1 {
-    text-align:center
-      
-}
 
 h4 {
   text-align:center;
@@ -21,7 +17,7 @@ h4 {
   
 }
 
-head {
+header {
   text-align: center;
  
 }
